<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>max</groupId>
  <artifactId>PathIndex</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>PathIndex</name>
  <url>http://maven.apache.org</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.7</version>
      <scope>test</scope>
    </dependency>
      <dependency>
          <groupId>org.neo4j</groupId>
          <artifactId>neo4j</artifactId>
          <version>2.3.0-M01</version>
      </dependency>
      <dependency>
          <groupId>net.jpountz.lz4</groupId>
          <artifactId>lz4</artifactId>
          <version>1.3.0</version>
      </dependency>
  </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>1.4.0</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>java</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <executable>java</executable>
                    <mainClass>NeoIntegration.Runner</mainClass>
                    <arguments>
                        <argument>-Xmx2G -Xms2G</argument>
                        <argument>-XX:+UseFastAccessorMethods</argument>
                        <argument>-XX:+DisableExplicitGC</argument>
                        <argument>-XX:+UseConcMarkSweepGC</argument>
                        <argument>-XX:+UseNUMA</argument>
                        <argument>-XX:+CMSParallelRemarkEnabled</argument>
                        <argument>-XX:MaxTenuringThreshold=15</argument>
                        <argument>-XX:MaxGCPauseMillis=30</argument>
                        <argument>-XX:GCPauseIntervalMillis=150</argument>
                        <argument>-XX:+UseAdaptiveGCBoundary</argument>
                        <argument>-XX:-UseGCOverheadLimit</argument>
                        <argument>-XX:+UseBiasedLocking</argument>
                        <argument>-XX:SurvivorRatio=8</argument>
                        <argument>-XX:TargetSurvivorRatio=90</argument>
                        <argument>-XX:MaxTenuringThreshold=15</argument>
                        <argument>-XX:+UseCompressedOops</argument>
                    </arguments>
                    <cleanupDaemonThreads>false</cleanupDaemonThreads>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
